# Loguru-Observability-Example

./: .gitignore  Makefile  README.md  docker-compose.yml
log_generator/: Dockerfile  pyproject.toml
log_generator/src/log_generator/: __init__.py
otel-loki-grafana/: loki-config.yaml  otel-collector-config.yaml
otel-loki-grafana/grafana/provisioning/dashboards/: dashboards.yml
otel-loki-grafana/grafana/provisioning/dashboards/templates/: log.json
otel-loki-grafana/grafana/provisioning/datasources/: datasources.yml
